Feature #85621. [Core] Configuration for reports to generate
Change-Id: I58ebd4130665beb37cd5baf545538ccc0d66701f